plugins {
    id 'java'
}

group = 'middleman'
version = '1.0'

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

jar {
    archiveBaseName = 'MiddleManAgent'
    manifest {
        attributes(
            'Premain-Class': 'middleman.agent.MiddleManAgent',
            'Agent-Class': 'middleman.agent.MiddleManAgent',
            'Main-Class': 'middleman.agent.AttachMain',
            'Can-Redefine-Classes': 'false',
            'Can-Retransform-Classes': 'false'
        )
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['--add-modules', 'jdk.attach']
}
